@@ -28,7 +28,10 @@
 /*
  *   Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
  *
- *   Changes on version 2.0.1 (current):
+ *   Changes on version 2.0.2 (current):
+ *   - Fix encode settings count. 
+ *
+ *   Changes on version 2.0.1:
  *   - Remove xz support.
  *   - Customize all writer settings.
  *
@@ -120,7 +123,7 @@
 
 #define LZMASDKOBJC_VERSION_MAJOR 2
 #define LZMASDKOBJC_VERSION_MINOR 0
-#define LZMASDKOBJC_VERSION_PATCH 1
+#define LZMASDKOBJC_VERSION_PATCH 2
 
 
 #import "LzmaSDKObjCTypes.h"
