@@ -1,6 +1,9 @@
 Lzma SDK for Objective-C based on extended functionality of the C++ LZMA code
 
-Changes on version 2.0.1 (current):
+Changes on version 2.0.2 (current):
+- Fix encode settings count.
+
+Changes on version 2.0.1:
 - Remove xz support.
 - Customize all writer settings.
 
@@ -10,7 +13,7 @@ Changes on version 2.0.0:
 - Deprecated xz decoding, will be removed in next release.
 - 7z archive writer.
 
-Changes on version 1.1.5 (current):
+Changes on version 1.1.5:
 - Added error possible failure reason description.
   Use `NSLocalizedFailureReasonErrorKey` to get possible failure string.
 
